--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,6 +1,6 @@
 .search-bar {
   color: #000;
-  width: 871px;
+  width: 500px;
   border-radius: 6px;
   background-color: rgba(254, 254, 254, 0.43);
   margin-left: 81px;
